Programming languages and paradigms/Interpreter/examples/bad/untyped_nil.ho
func main() {
    var x *int = nil;
    var y = nil; // error:3:13: use of untyped nil
}